--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,5 +37,6 @@
   },
   "devDependencies": {
     "prettier": "^1.19.1"
-  }
+  },
+  "homepage": "https://n2wstar.github.io/my-movie-app"
 }
